resolve compile warnings